--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
 <body>
+    <ul class="nav nav-tabs">
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="https://alainlink.github.io/homeLink/">Inicio</a>
+    </li>
+</ul>
   <app-root></app-root>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="runtime.a0bf9a35ceb60d1c.js" type="module"></script><script src="polyfills.9e65f2a1390700b1.js" type="module"></script><script src="main.b50b20814e5a790d.js" type="module"></script>
