--- a/index.html
+++ b/index.html
@@ -7,11 +7,45 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
 <body>
-    <ul class="nav nav-tabs">
-    <li class="nav-item">
-      <a class="nav-link active" aria-current="page" href="https://alainlink.github.io/homeLink/">Inicio</a>
-    </li>
-</ul>
+<ul class="nav nav-tabs">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="https://alainlink.github.io/imagenesAlain/">Imagenes</a>
+                </li><li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="https://alainlink.github.io/Libros/">Libros</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="https://alainlink.github.io/tienda-comics/">Tienda de comics by Link</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="">Extender aquí</a>
+
+
+                    <div class="accordion" id="accordionExample">
+                        <div class="accordion-item">
+                          <h2 class="accordion-header" id="headingOne">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                              Acerca de mi...
+                            </button>
+                          </h2>
+                          <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                              <strong>Mi nombre es Alain Berber Álvarez.</strong> <p><br><br>
+                                <strong>Tengo la edad de 24 años, <br>
+                                Nací el 7 de octubre de 1997, en San Juan del Rio, Queretaro <br>
+                            Me gusta mucho nadar, practicar ciclismo de montaña.<br>
+                        Actualmente trabajo en icorp</strong> 
+
+                              </p>
+                        <br><br>
+                        <img src="https://scontent.fqro3-1.fna.fbcdn.net/v/t39.30808-6/256525586_4506158152807026_114230825620025345_n.jpg?_nc_cat=107&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=VnD3D2F3DpMAX_ayyU_&_nc_ht=scontent.fqro3-1.fna&oh=00_AT_aoijSuiTQjAwywCiktexUlrFTxHnzcoOBeMnd74BLFg&oe=6248EBC8" class="img-thumbnail" alt="...">
+
+                              </div>
+                          </div>
+                        </div>
+                   
+                    
+                      </div>
+                               </ul>
   <app-root></app-root>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="runtime.a0bf9a35ceb60d1c.js" type="module"></script><script src="polyfills.9e65f2a1390700b1.js" type="module"></script><script src="main.b50b20814e5a790d.js" type="module"></script>
